--- a/replacedialog.ui
+++ b/replacedialog.ui
@@ -46,7 +46,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QLineEdit" name="lineEdit"/>
+          <widget class="QLineEdit" name="searchText"/>
          </item>
         </layout>
        </item>
@@ -66,14 +66,14 @@
           </widget>
          </item>
          <item>
-          <widget class="QLineEdit" name="lineEdit_2"/>
+          <widget class="QLineEdit" name="targetText"/>
          </item>
         </layout>
        </item>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_4">
          <item>
-          <widget class="QCheckBox" name="checkBox">
+          <widget class="QCheckBox" name="cbCaseSensetive">
            <property name="text">
             <string>区分大小写</string>
            </property>
@@ -84,7 +84,7 @@
            <property name="title">
             <string>方向</string>
            </property>
-           <widget class="QWidget" name="">
+           <widget class="QWidget" name="layoutWidget">
             <property name="geometry">
              <rect>
               <x>11</x>
@@ -95,7 +95,7 @@
             </property>
             <layout class="QHBoxLayout" name="horizontalLayout_3">
              <item>
-              <widget class="QRadioButton" name="radioButton">
+              <widget class="QRadioButton" name="rbUp">
                <property name="minimumSize">
                 <size>
                  <width>50</width>
@@ -108,7 +108,7 @@
               </widget>
              </item>
              <item>
-              <widget class="QRadioButton" name="radioButton_2">
+              <widget class="QRadioButton" name="rbDown">
                <property name="minimumSize">
                 <size>
                  <width>50</width>
@@ -131,28 +131,28 @@
      <item>
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
-        <widget class="QPushButton" name="pushButton">
+        <widget class="QPushButton" name="btFindNext">
          <property name="text">
           <string>查找下一个</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="pushButton_2">
+        <widget class="QPushButton" name="btReplace">
          <property name="text">
           <string>替换</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="pushButton_3">
+        <widget class="QPushButton" name="btReplaceAll">
          <property name="text">
           <string>全部替换</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="pushButton_4">
+        <widget class="QPushButton" name="btCancel">
          <property name="text">
           <string>取消</string>
          </property>
