--- a/searchdialog.ui
+++ b/searchdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>243</width>
-    <height>100</height>
+    <width>429</width>
+    <height>144</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -51,7 +51,7 @@
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_2">
          <item>
-          <widget class="QCheckBox" name="checkBox">
+          <widget class="QCheckBox" name="cbCaseSensetive">
            <property name="text">
             <string>区分大小写</string>
            </property>
@@ -65,7 +65,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QRadioButton" name="radioButton_2">
+          <widget class="QRadioButton" name="rbDown">
            <property name="text">
             <string>向下</string>
            </property>
